# comphapt

./: CMakeLists.txt  haply_test.cpp  haptic_device.ino  main.cpp
Haply-API-cpp/: CMakeLists.txt
Haply-API-cpp/src/Haply/: Board.cpp
serial/: CMakeLists.txt
